[package]
name = "divert"
version = "0.6.0"
edition = "2021"
description = "Rust Lang bindings for Recast Navigation"
homepage = "https://github.com/ohchase/divert"
repository = "https://github.com/ohchase/divert"
license = "Zlib"

[lib]
crate-type = ["lib"]

[dependencies]
bitflags = "2.5.0"
thiserror = "1.0.58"
recastnavigation-sys = { version = "1.0.3", features = [
    "detour_large_nav_meshes",
] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
byteorder = "1.4.3"
thiserror = "1.0.37"
rand = "0.8.5"
